src-tauri/check_errors.txt
    Checking emmm2 v0.1.0 (E:\Dev\EMMM2NEW\src-tauri)
error[E0631]: type mismatch in closure arguments
   --> src\services\browser\browser_service.rs:204:6
    |
204 |     .on_navigation({
    |      ^^^^^^^^^^^^^ expected due to this
...
207 |         move |nav_url: tauri::Url| {
    |         -------------------------- found signature defined here
    |
    = note: expected closure signature `for<'a> fn(&'a tauri::Url) -> _`
               found closure signature `fn(tauri::Url) -> _`
note: required by a bound in `WebviewBuilder::<R>::on_navigation`
   --> C:\Users\yusri\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\webview\mod.rs:529:27
    |
529 |   pub fn on_navigation<F: Fn(&Url) -> bool + Send + 'static>(mut self, f: F) -> Self {
    |                           ^^^^^^^^^^^^^^^^ required by this bound in `WebviewBuilder::<R>::on_navigation`
help: consider adjusting the signature so it borrows its argument
    |
207 |         move |nav_url: &tauri::Url| {
    |                        +

error[E0631]: type mismatch in closure arguments
   --> src\services\browser\browser_service.rs:275:6
    |
275 |     .on_new_window(move |url: String, _features| {
    |      ^^^^^^^^^^^^^ ----------------------------- found signature defined here
    |      |
    |      expected due to this
    |
    = note: expected closure signature `fn(tauri::Url, NewWindowFeatures) -> _`
               found closure signature `fn(std::string::String, _) -> _`
note: required by a bound in `WebviewBuilder::<R>::on_new_window`
   --> C:\Users\yusri\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\webview\mod.rs:588:8
    |
587 |   pub fn on_new_window<
    |          ------------- required by a bound in this associated function
588 |     F: Fn(Url, NewWindowFeatures) -> NewWindowResponse<R> + Send + Sync + 'static,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WebviewBuilder::<R>::on_new_window`

For more information about this error, try `rustc --explain E0631`.
error: could not compile `emmm2` (lib) due to 2 previous errors
